# gngeo

./: .gitignore  .travis.yml  Makefile.in  README  build-nigthly-deb-from-master.sh  configure.ac
.ci/: github-gc.sh
.github/scripts/: build-mingw.sh  build-msys2.sh  build.sh
.github/workflows/: build-and-publish.yaml  build-tests.yaml
.travis/: github-gc.sh
debian/: changelog  control  copyright  rules
debian/source/: lintian-overrides
gngeo.dat/: Makefile.am
mingw/: stdio.h.in
nsis/: Makefile.in  gngeo.nsi
src/: Makefile.am  blitter.h  conf.c  debug.c  debug.h  emu.c  emu.h  event.c  event.h  frame_skip.c  gnutil.c  gnutil.h  list.c  main.c  memory.c  menu.c  messages.c  resfile.c  roms.c  screen.c  screen.h  sound.c  state.c  state.h  transpack.c  transpack.h  unzip.c  video.c  video.h  video_template.h
src/blitter/: Makefile.am  glsl.c  noop.glsl  noop.glslp  opengl.c  soft.c
src/effect/: Makefile.am
src/generator68k/: Makefile.am
src/mamez80/: z80.c  z80.h
